--- a/quiz_game_page.html
+++ b/quiz_game_page.html
@@ -14,19 +14,19 @@
     <h4 id="player2_name"></h4><span id="player2_score"></span>
     <div class="container">
         <center>
-            <h2 style="color: white;">The Math Quiz Game!</h2>
+            <h2 style="color: rgb(250, 250, 250);">The Math Quiz Game!</h2>
             <h3 id="player_question"></h3>
             <h3 id="player_answer"></h3>
             <div id="output" class="col-lg-6"></div>
             <br>
 		<br>
 
-		<label>Send Your Number </label>
+		<label>Send Your Number:</label>
 <input type="text" id="Number1" class="form-control" placeholder="Number1">
 		<br>
         <input type="text" id="Number2" class="form-control" placeholder="Number2">
         <br>
-    <button onclick="send()" class="btn btn-success" style="width:30% ;">Send</button>
+    <button onclick="send()" class="btn btn-success" style="width:30%">Send</button>
         </center>
     </div>
 </body>
